--- a/practice.css
+++ b/practice.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
@@ -5,6 +10,8 @@ body {
 
 .product {
   border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
 }
 
 .product-title {
@@ -12,6 +19,7 @@ body {
   font-size: 22px;
   text-transform: uppercase;
   background-color: #f7f7f7;
+  padding: 15px;
 }
 
 .price {
@@ -23,12 +31,13 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
+  margin-bottom: 20px;
 }
 
 /* We should always use this 4 steps
 -> link, visited, hover, active*/
 .more-info:link, .more-info:visited {
-  color: black;  
+  color: black;
 }
 
 .more-info:hover, .more-info:active {
@@ -38,10 +47,18 @@ body {
 .details-title {
   text-transform:uppercase;
   font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
+}
+
+/* All the list in the 'deatils-list' */
+.details-list li {
+  margin-bottom: 10px;
 }
 
 /* cursor:pointer 
@@ -54,6 +71,9 @@ body {
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border-top: 4px solid black;
 }
 
 .add-cart:hover {
