--- a/component/table.html
+++ b/component/table.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Table Component</title>
     <style>
       /* ★ Write CSS directly in html file */
       /* SPACING SYSTEM (px)
